--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.13"
   },
   "dependencies": {
-    "antd": "^5.21.2"
+    "antd": "^5.21.2",
+    "axios": "^1.7.7"
   }
 }
